# 2048

./: .gitignore  CMakeLists.txt  game_field.cpp  game_field.h  main.cpp
